# hague-platform-v5

./: deploy.sh  docker-compose.local.yaml
backend/labzang/: __init__.py  pyproject.toml
backend/labzang/alembic/: env.py
backend/labzang/alembic/versions/: 20250326_01_titanic_passenger_features.py
backend/labzang/apps/ai/llm/: __init__.py  korean_embeddings.py  korean_llm.py
backend/labzang/apps/ai/rag/: chain.py  settings.py  vectorstore.py
backend/labzang/apps/ai/sentiment/: __init__.py
backend/labzang/apps/chat/: __init__.py
backend/labzang/apps/chat/adapter/: __init__.py
backend/labzang/apps/chat/application/: __init__.py  config.py
backend/labzang/apps/com/chat/: __init__.py
backend/labzang/apps/crawler/application/: config.py  main.py
backend/labzang/apps/crawler/domain/: value_objects.py
backend/labzang/apps/crawler/resources/: pyrightconfig.json
backend/labzang/apps/geospatial/application/: main.py
backend/labzang/apps/kaggle/: Dockerfile
backend/labzang/apps/kaggle/application/: config.py  main.py
backend/labzang/apps/kaggle/domain/: __init__.py
backend/labzang/apps/learning/: ARCHITECTURE.md  HEXAGONAL_README.md  main_hex.py
backend/labzang/apps/ml/: requirements.txt
backend/labzang/bootstrap/: __init__.py  entrypoint.py  factory.py  monolith_app.py
backend/labzang/core/: __init__.py  config.py  database.py  font_utils.py  middleware.py  paths.py  vectorstore.py
backend/labzang/core/common_values/: __init__.py  money.py
backend/labzang/core/config/: __init__.py
backend/labzang/core/dash/: __init__.py
backend/labzang/core/database/: __init__.py  vectorstore.py
backend/labzang/core/engine/: vectorstore.py
backend/labzang/core/llm/: __init__.py
backend/labzang/core/middleware/: __init__.py
backend/labzang/core/paths/: __init__.py
backend/labzang/core/rag/: __init__.py  chain.py  settings.py  vectorstore.py
backend/labzang/core/shared/: config.py  paths.py
backend/labzang/core/utils/: __init__.py  logger.py  utils.py
backend/labzang/shared/: __init__.py  bases.py  exceptions.py
backend/labzang/shared/common/: __init__.py  font_utils.py
backend/labzang/shared/common_values/: __init__.py  seoul_crime.py  titanic.py
backend/labzang/shared/orchestrator/: __init__.py
backend/labzang/typings/folium/: __init__.pyi
(+1112 files in other folders)
