[project]
name = "labzang"
version = "0.1.0"
description = "Labzang backend apps"
readme = "README.md"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true

# 스텁 패키지 없이 사용하는 서드파티 모듈 (types-requests 등 미설치 시 경고 제거)
[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
